# Betriebssystem

hu1/.submitscript/data/: config.json
hu1/.submitscript/data/assignments/shell-basic/submissions/[accepted] 6e7318db-ab71-499f-9b58-bdc7d45c2d5f/: submission.json  submission_response.json  upload.tgz
hu1/bshell/: CMakeLists.txt  README.txt
hu1/bshell/src/: Makefile  Makefile.nolibreadline  command.c  command.d  command.h  debug.h  execute.c  execute.d  execute.h  helper.c  helper.d  helper.h  list.c  list.d  list.h  readlineparsing.c  readlineparsing.d  shell  shell.c  shell.d  shell.h  statuslist.c  statuslist.d  statuslist.h  stringbuffer.c  stringbuffer.d  stringbuffer.h  tokenparser.c  tokenparser.d  tokenparser.h  tokenparser.output  tokenparser.y  tokenscanner.c  tokenscanner.d  tokenscanner.l  types.h
hu2/.submitscript/data/: config.json
hu2/.submitscript/data/assignments/memory/submissions/[evaluated] 4343663c-ec9a-414d-8096-960c688f14c5/: submission.json  submission_response.json  upload.tgz
hu2/.submitscript/data/assignments/memory/submissions/[evaluated] 5611e35c-4e21-469f-b829-079438202731/: submission.json  submission_response.json  upload.tgz
hu2/.submitscript/data/assignments/memory/submissions/[evaluated] 7f9400d5-6b50-4703-a21f-5d97586bdcce/: submission.json  submission_response.json  upload.tgz
hu2/memory/: CMakeLists.txt  correct-256.txt  correct-64.txt
hu2/memory/src/: main.c  output_utility.c  output_utility.h  vmm.c  vmm.h
(+23 files in other folders)
